# PolyWatcher

./: .env.example  .gitignore  Cargo.toml  README.md  sports_list.txt
src/: clob.rs  erc20.json  gamma.rs  main.rs  sports_ws.rs  test_ws.rs  ui.rs  watcher.rs
