[package]
name = "PolyWatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
dotenv = "0.15"
alloy = { version = "1.6.3", features = ["full"] }
rust_decimal = "1.36"
polymarket-client-sdk = { version = "0.4.3", features = ["clob", "gamma", "ws", "data"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
