[package]
name = "PolyWatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-util = "0.3.32"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.22.0", features = ["v4"] }
dotenv = "0.15"
alloy = { version = "1.7.3", features = ["full"] }
rust_decimal = "1.40.0"
polymarket-client-sdk = { version = "0.4.3", features = ["clob", "gamma", "ws", "data"] }
reqwest = "0.13.2"
alloy-primitives = "1.5.7"
rustls = { version = "0.23.37", features = ["aws-lc-rs"] }
